# Pencil-task

./: .env.example  .gitignore  LICENSE  README.md  System_overview.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/agents/: ads_agent.py  base_agent.py  blog_agent.py  image_agent.py  judge_agent.py  video_agent.py
backend/api/: models.py  routes.py
backend/llm/: __init__.py  providers.py
backend/observability/: audit_log.py  run_storage.py  tracer.py
backend/pipeline/: graph.py  state.py
backend/pipeline/nodes/: evidence_check.py  generate_assets.py  narrative_synth.py  package.py  route_decision.py  score_campaign.py  score_deterministic.py  score_llm_judge.py  source_collect.py
backend/pipeline/tools/: char_counter.py  claim_linker.py  format_validator.py  keyword_checker.py
backend/prompting/: __init__.py  adapters.py  generator_adapters.py  spec.py
backend/registries/: product_truth.py  source_registry.py
config/: brand_voice.yaml  product_truth.yaml  scoring_rubric.yaml  sources.yaml  triggers.yaml
data/sourced/: march_2026_cycle.json
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AgentConfig.jsx  AuditTrail.jsx  GeneratePanel.jsx  (+4 more)
tests/: test_claim_linker.py  test_deterministic_scoring.py  test_model_selection.py  test_pipeline_smoke.py  test_prompt_adapters.py  test_provider_resolution.py  test_run_storage.py  test_source_collect_coverage.py  test_state_validation.py
(+1 files in other folders)
